# kwin-colorcorrection-effect

./: CMakeLists.txt
debian/: changelog  control
src/: CMakeLists.txt  ColorCorrectionFilterConfig.kcfgc  ColorCorrectionFilterEffect.cpp  ColorCorrectionFilterEffect.h  ColorCorrectionFilterShader.cpp  ColorCorrectionFilterShader.h  metadata.json  options.kcfg  plugin.cpp
src/kcm/: CMakeLists.txt  ColorCorrectionFilter.h  ColorCorrectionFilter.ui  ColorCorrectionFilterKCM.cpp  ColorCorrectionFilterKCM.h  metadata.json  plugin.cpp
